@@ -68,8 +68,8 @@ namespace Jack
         fprintf(file, buffer);
         
         fprintf(file, "\n unset multiplot\n");  
-        fprintf(file, "set output 'AdapterTiming1.pdf\n");
-        fprintf(file, "set terminal pdf\n");
+        fprintf(file, "set output 'AdapterTiming1.svg\n");
+        fprintf(file, "set terminal svg\n");
         
         fprintf(file, "set multiplot\n");
         fprintf(file, "set grid\n");
@@ -80,8 +80,10 @@ namespace Jack
         fprintf(file, "plot ");
         sprintf(buffer, "\"JackAudioAdapter.log\" using 2 title \"Consumer interrupt period\" with lines,");
         fprintf(file, buffer);
-        sprintf(buffer, "\"JackAudioAdapter.log\" using 3 title \"Producer interrupt period\" with lines");
+        sprintf(buffer, "\"JackAudioAdapter.log\" using 3 title \"Producer interrupt period\" with lines\n");
         fprintf(file, buffer);
+        fprintf(file, "unset multiplot\n");
+        fprintf(file, "unset output\n");
         
         fclose(file);
    
@@ -100,8 +102,8 @@ namespace Jack
         fprintf(file, buffer);
         
         fprintf(file, "\n unset multiplot\n");  
-        fprintf(file, "set output 'AdapterTiming2.pdf\n");
-        fprintf(file, "set terminal pdf\n");
+        fprintf(file, "set output 'AdapterTiming2.svg\n");
+        fprintf(file, "set terminal svg\n");
         
         fprintf(file, "set multiplot\n");
         fprintf(file, "set grid\n");
@@ -112,8 +114,10 @@ namespace Jack
         fprintf(file, "plot ");
         sprintf(buffer, "\"JackAudioAdapter.log\" using 4 title \"Ratio 1\" with lines,");
         fprintf(file, buffer);
-        sprintf(buffer, "\"JackAudioAdapter.log\" using 5 title \"Ratio 2\" with lines");
+        sprintf(buffer, "\"JackAudioAdapter.log\" using 5 title \"Ratio 2\" with lines\n");
         fprintf(file, buffer);
+        fprintf(file, "unset multiplot\n");
+        fprintf(file, "unset output\n");
         
         fclose(file);
 
@@ -132,8 +136,8 @@ namespace Jack
         fprintf(file, buffer);
         
         fprintf(file, "\n unset multiplot\n");  
-        fprintf(file, "set output 'AdapterTiming3.pdf\n");
-        fprintf(file, "set terminal pdf\n");
+        fprintf(file, "set output 'AdapterTiming3.svg\n");
+        fprintf(file, "set terminal svg\n");
         
         fprintf(file, "set multiplot\n");
         fprintf(file, "set grid\n");
@@ -144,8 +148,10 @@ namespace Jack
         fprintf(file, "plot ");
         sprintf(buffer, "\"JackAudioAdapter.log\" using 6 title \"Frames position in consumer ringbuffer\" with lines,");
         fprintf(file, buffer);
-        sprintf(buffer, "\"JackAudioAdapter.log\" using 7 title \"Frames position in producer ringbuffer\" with lines");
+        sprintf(buffer, "\"JackAudioAdapter.log\" using 7 title \"Frames position in producer ringbuffer\" with lines\n");
         fprintf(file, buffer);
+        fprintf(file, "unset multiplot\n");
+        fprintf(file, "unset output\n");
         
         fclose(file);
     }
